--- a/Templates/agregar_producto.html
+++ b/Templates/agregar_producto.html
@@ -81,8 +81,8 @@
 }
 
 .card-form .card-header {
-    background-color: #f8caca;
-    color: #b30000;
+    background-color: #0f172a;
+    color: white;
     text-align: center;
     font-size: 1.6rem;
     font-weight: bold;
@@ -144,8 +144,8 @@
 }
 
 .card-table .card-header {
-    background-color: #cfe4fb;
-    color: #0b2d6b;
+    background-color: #0f172a;
+    color: white;
     text-align: center;
     font-size: 1.6rem;
     font-weight: bold;
