--- a/Templates/Productos.html
+++ b/Templates/Productos.html
@@ -26,13 +26,13 @@
                 <tbody>
                     {% for producto in productos %}
                     <tr>
-                        <td>{{ producto.id }}</td>
+                        <td>{{ loop.index }}</td>
                         <td>{{ producto.nombre_producto }}</td>
                         <td>{{ producto.precio }}</td>
                         <td>{{ producto.descripcion }}</td>
                         <td>
                             <div class="action-buttons">
-                                <button class="btn-edit" onclick="abrirModalEditar({{ producto.id }}, '{{ producto.nombre_producto }}', {{ producto.precio }}, '{{ producto.descripcion }}')">Editar</button>
+                                <button class="btn-edit" onclick="abrirModalEditar({{ loop.index     }}, '{{ producto.nombre_producto }}', {{ producto.precio }}, '{{ producto.descripcion }}')">Editar</button>
                                 <a href="{{ url_for('eliminar_producto', id=producto.id) }}" class="btn-delete btn-eliminar">Eliminar</a>
                             </div>
                         </td>
@@ -127,8 +127,8 @@ body {
 
 /* === Encabezado del módulo === */
 .module-header {
-    background-color: #f8caca; /* Rosa claro */
-    color: #8b0000; /* Rojo oscuro */
+    background-color: #0f172a; /* Rosa claro */
+    color: white; /* Rojo oscuro */
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
