--- a/Templates/contactopost.html
+++ b/Templates/contactopost.html
@@ -3,7 +3,7 @@
 {% block titulo %} CONTACTOS {% endblock titulo %}
 
 {% block body %}
-<div class="container mt-5">
+<div class="container mt-5 p-5">
     <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6">
             <div class="card shadow-lg">
