--- a/Templates/login.html
+++ b/Templates/login.html
@@ -20,16 +20,16 @@
   {% endif %}
 {% endwith %}
 
-<div class="d-flex justify-content-center align-items-center vh-100" style="background-color: #a5ada8;">
+<div class="d-flex justify-content-center align-items-center vh-100" style="background-color: #0f172a;">
 
     <div class="p-4 w-100" style="max-width: 1100px;">
-        <div class="rounded-5 shadow-lg p-4" style="background-color: #cecacaf1;">
+        <div class="rounded-5 shadow-lg p-4" style="background-color: #0f172a;">
 
             <div class="row g-0">
                 <!-- Columna Izquierda -->
                 <div class=" rounded-5 col-md-6 d-flex flex-column justify-content-center align-items-center text-white p-4"
-                    style="background-color: #a5ada8;">
-                    <img src="{{ url_for('static', filename='usuario.png') }}" class="img-fluid mb-3"
+                    style="background-color: #0f172a;">
+                    <img src="{{ url_for('static', filename='img/usuario.png') }}" class="img-fluid mb-3"
                         style="max-width: 20%; height: auto; object-fit: contain;">
                     <h2 class="text-center">¡Bienvenido Nuevamente!</h2>
                     <p class="text-center" style="font-family: 'Lucida Console', monospace;">
@@ -52,7 +52,7 @@
                     <button type="button"
                         class="btn btn-light w-100 d-flex align-items-center justify-content-center mb-3"
                         style="max-width: 400px; height: 45px;">
-                        <img src="{{ url_for('static', filename='google.webp') }}" alt="Google Logo"
+                        <img src="{{ url_for('static', filename='img/google.webp') }}" alt="Google Logo"
                             style="width: 20px; margin-right: 10px;">
                         Iniciar con Google
                     </button>
